--- a/style.css
+++ b/style.css
@@ -7,6 +7,10 @@
 body {
     background-color: hsl(30, 38%, 92%);
     min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 main {
